--- a/templates/test_details.html
+++ b/templates/test_details.html
@@ -92,9 +92,10 @@
         <!-- Add as many columns as needed -->
         <!-- Add other details as needed -->
     </div>
-    {% comment %} <a href="{% url 'book_now' lab_test.test_name lab_test.test_price %}" class="book-now-button">Book Now</a> {% endcomment %}
-    {% comment %} <a href="{% url 'book_now' test_name=lab_test.test_name test_price=lab_test.test_price %}" class="book-now-button">Book Now</a> {% endcomment %}
-    <a href="{% url 'book_now' test_id=lab_test.id test_name=lab_test.test_name test_price=lab_test.test_price %}" class="book-now-button">Book Now</a>
+    
+    {% comment %} <a href="{% url 'book_now' test_id=lab_test.id test_name=lab_test.test_name test_price=lab_test.test_price %}" class="book-now-button">Book Now</a> {% endcomment %}
+    <button onclick="window.location.href='{% url 'book_now' test_id=lab_test.id test_name=lab_test.test_name test_price=lab_test.test_price %}'" class="book-now-button">Book Now</button>
+
     
 
 
