--- a/templates/labhome.html
+++ b/templates/labhome.html
@@ -216,6 +216,7 @@
                                                     </a>
                                                 </div>
                                             </div>
+                                            <button onclick="location.href='{% url 'lab_review' %}'" class="btn btn-primary">Leave a Review</button>
                                             
                                         </div>
                                     </div>
