--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
 <head>
-  <title>Donor Registration Form</title>
+  <title>Registration Form</title>
   <!-- Add Bootstrap CSS link -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
