--- a/templates/base.html
+++ b/templates/base.html
@@ -33,19 +33,7 @@
 </head>
 
 <body>
-    <!-- Spinner Start -->
-    {% comment %} <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-grow text-primary m-1" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-dark m-1" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-        <div class="spinner-grow text-secondary m-1" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-    </div> {% endcomment %}
-    <!-- Spinner End -->
+    
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
@@ -74,8 +62,19 @@
                 <a href="{% url 'about' %}" class="nav-item nav-link">About Us</a>
                 <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
                 {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'loggout' %}">Logout</a>
-                <a href="#" class="nav-item nav-link">{{user.email}}</a>
+                {% comment %} <a class="nav-item nav-link" href="{% url 'loggout' %}">Logout</a>
+                <a href="#" class="nav-item nav-link">{{user.email}}</a> {% endcomment %}
+                
+                    <div class="dropdown">
+                        <a href="#" class="nav-item nav-link dropdown-toggle" id="profileDropdown" data-toggle="dropdown">
+                        {{user.email}}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="profileDropdown">
+                            <a class="dropdown-item" href="{% url 'view_profile' %}">Profile</a> 
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'loggout' %}">Log Out</a>
+                        </div>
+                    </div>
                 {% endif %}
             </div>
         </div>
@@ -131,18 +130,18 @@
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="lib/wow/wow.min.js"></script>
-<script src="lib/easing/easing.min.js"></script>
-<script src="lib/waypoints/waypoints.min.js"></script>
-<script src="lib/owlcarousel/owl.carousel.min.js"></script>
-<script src="lib/tempusdominus/js/moment.min.js"></script>
-<script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-<script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-<script src="lib/twentytwenty/jquery.event.move.js"></script>
-<script src="lib/twentytwenty/jquery.twentytwenty.js"></script>
+<script src="{% static 'lib/wow/wow.min.js' %}"></script>
+<script src="{% static 'lib/easing/easing.min.js' %}"></script>
+<script src="{% static 'lib/waypoints/waypoints.min.js' %}"></script>
+<script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
+<script src="{% static 'lib/tempusdominus/js/moment.min.js' %}"></script>
+<script src="{% static 'lib/tempusdominus/js/moment-timezone.min.js' %}"></script>
+<script src="{% static 'lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js' %}"></script>
+<script src="{% static 'lib/twentytwenty/jquery.event.move.js' %}"></script>
+<script src="{% static 'lib/twentytwenty/jquery.twentytwenty.js' %}"></script>
 
 <!-- Template Javascript -->
-<script src="js/main.js"></script>
+<script src="{% static 'js/main.js' %}"></script>
 </body>
 
 </html>
