--- a/templates/donatenow.html
+++ b/templates/donatenow.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 <html lang="en">
 
@@ -60,8 +61,19 @@
                 <a href="{% url 'about' %}" class="nav-item nav-link">About Us</a>
                 <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
                 {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'loggout' %}">Logout</a>
-                <a href="#" class="nav-item nav-link">{{user.email}}</a>
+                {% comment %} <a class="nav-item nav-link" href="{% url 'loggout' %}">Logout</a>
+                <a href="#" class="nav-item nav-link">{{user.email}}</a> {% endcomment %}
+                
+                    <div class="dropdown">
+                        <a href="#" class="nav-item nav-link dropdown-toggle" id="profileDropdown" data-toggle="dropdown">
+                        {{user.email}}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="profileDropdown">
+                            <a class="dropdown-item" href="{% url 'view_profile' %}">Profile</a> 
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'loggout' %}">Log Out</a>
+                        </div>
+                    </div>
                 {% endif %}
                 {% comment %} <a href="{% url 'donatenow' %}" class="nav-item nav-link active">Donate Blood</a>
                 <a href="{% url 'appointmentschedule' %}" class="nav-item nav-link">Appointment</a>
