--- a/templates/index.html
+++ b/templates/index.html
@@ -63,12 +63,12 @@
                       {{user.email}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="profileDropdown">
-                      <a class="dropdown-item" href="{% url 'view_profile' %}">Profile</a>
+                      {% comment %} <a class="dropdown-item" href="{% url 'view_profile' %}">Profile</a> {% endcomment %}
                       
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="{% url 'loggout' %}">Log Out</a>
                     </div>
-                  </div>
+                </div>
 
                 {% else %}
                     <a href="{% url 'index' %}" class="nav-item nav-link active">Home</a>
