--- a/templates/registerasdonor.html
+++ b/templates/registerasdonor.html
@@ -71,14 +71,29 @@
             <div class="navbar-nav ms-auto py-0">
                 <a href="{% url 'homebloodbank' %}" class="nav-item nav-link ">Home</a>
                 {% if user.is_authenticated %}
-                <a href="{% url 'registerasdonor' %}" class="nav-item nav-link">Donate Blood</a>
+                <a href="{% url 'registerasdonor' %}" class="nav-item nav-link active">Donate Blood</a>
                 <a href="{% url 'campschedulesfordonor' %}" class="nav-item nav-link">Appointment</a>
                 {% endif %}
                 <a href="{% url 'about' %}" class="nav-item nav-link">About Us</a>
                 <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
-                {% if user.is_authenticated %}
+                {% comment %} {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="{% url 'loggout' %}">Logout</a>
                 <a href="#" class="nav-item nav-link">{{user.email}}</a>
+                {% endif %} {% endcomment %}
+                {% if user.is_authenticated %}
+                {% comment %} <a class="nav-item nav-link" href="{% url 'loggout' %}">Logout</a>
+                <a href="#" class="nav-item nav-link">{{user.email}}</a> {% endcomment %}
+                
+                    <div class="dropdown">
+                        <a href="#" class="nav-item nav-link dropdown-toggle" id="profileDropdown" data-toggle="dropdown">
+                        {{user.email}}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="profileDropdown">
+                            <a class="dropdown-item" href="{% url 'view_profile' %}">Profile</a> 
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'loggout' %}">Log Out</a>
+                        </div>
+                    </div>
                 {% endif %}
                 
             </div>
